2010-02-10  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	* HE5Parser.cc has new limit(=30) for StructMetadata files to scan.
	* HDF5RequestHandler.cc has more meaningful error message when it 
	  deals with multiple Swaths case.

2010-02-01  rduncan

	Release 1/01/2010

2010-01-29  hyoklee

	Fixed the coompilation error when DEBUG mode is enabled.

2010-01-22  Patrick West <pwest@ucar.edu>

	RPM to use h5.conf instead of bes-hdf5-data.sh
	M    hdf5_handler.spec

2010-01-21  hyoklee

	Bug fix Ticket #1211 and documentation update.

2010-01-21  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	* doc/Doxygen is added.
	* configure.ac set version to 1.3.5 in AC_INIT().
	* h5get.cc updated comments for Doxygen.
	* h5dds.cc updated comments for Doxygen.
	* h5das.cc updated comments for Doxygen.
	* HE5Parser.h removed useless boolean variables.

2010-01-20  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	* h5das.cc removed double quotes.
	* h5das.cc renamed COARDS,GrADS to CF-1.4.
	* h5das.cc added fake in lev/time long_name attribute.

2010-01-19  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	Corrected the missing dimension names in the old(<2007) OMUVB product.

2010-01-12  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	Corrected coordinates attribute for 2D-swath case.
	
	* HE5Parser.cc has now set_swath_2D().
	* h5das.cc removed extra "lat lon" attribute insertion.

	Re-organized source codes and made swath handling robust.
	
	* HE5CFGrid class is added.
	* HE5CSwath class is added.
	* common.h is removed.
	* hdf5_handler.h has the contents of the old common.h.
	
2009-12-18  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	* HE5Parser.cc fix for Ticket #1460.

2009-12-11  Hyo-Kyung Joe Lee  <hyoklee@hdfgroup.org>

	* hdfeos_das.lex/y is renamed to he5das.lex/y 
	* hdfeos.lex/y is renamed to he5dds.lex/y 
	* H5EOS.h/cc is renamed to HE5Parser.h/cc.
	* H5CF.h/cc is renamed to HE5CF.h/cc.
	* H5ShortName.h/cc is renamed to HE5ShortName.h/cc.